k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: node-login
  name: node-login
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-login
  template:
    metadata:
      labels:
        app: node-login
    spec:
      containers:
        - image: quay.io/sachinayyar/node-login:latest
          imagePullPolicy: Always
          name: node-login
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 9090
              protocol: TCP
