k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: node-login
  name: node-login
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: node-login
    weight: 100
